# gitbutler

./: CODEOWNERS  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  flake.nix  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: lite.yml  publish.yaml  push.yaml
apps/desktop/: package.json
apps/lite/: AGENTS.md  oxlint.config.ts  package.json
crates/: AGENTS.md  WORKSPACE_MODEL.md
crates/but/: AGENTS.md  Cargo.toml
crates/but-action/: Cargo.toml
crates/but-agentlog/: Cargo.toml
crates/but-api/: Cargo.toml
crates/but-bitbucket/: Cargo.toml
crates/but-branches/: Cargo.toml
crates/but-branches/src/: lib.rs  walk.rs
crates/but-branches/tests/branches/: listing.rs  main.rs  utils.rs
crates/but-branches/tests/fixtures/scenario/: branch-listing.sh  unborn-head-with-remotes.sh
crates/but-core/: Cargo.toml
crates/but-debug/: Cargo.toml
crates/but-feedback/: Cargo.toml
crates/but-forge/: Cargo.toml
crates/but-graph/: Cargo.toml
crates/but-napi/: Cargo.toml  README.md
crates/but-path/: Cargo.toml
crates/but-rebase/: Cargo.toml
crates/but-testsupport/: Cargo.toml
crates/but-ts/: Cargo.toml  README.md
crates/but-workspace/: Cargo.toml
crates/gitbutler-branch-actions/: Cargo.toml
crates/gitbutler-oplog/: Cargo.toml
crates/gitbutler-repo/: Cargo.toml
crates/gitbutler-stack/: Cargo.toml
crates/gitbutler-stack/src/: lib.rs  stack.rs  stack_branch.rs  state.rs  target.rs
crates/gitbutler-stack/tests/: stack.rs
crates/gitbutler-tauri/: Cargo.toml  (+1 more)
scripts/: release.sh
(+781 files in other folders)
