[package]
name = "but-branches"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true
description = "A read-only listing of all branches, grouped for display, backed by but-graph"

[lib]
doctest = false

[dependencies]
but-core.workspace = true
but-graph.workspace = true

anyhow.workspace = true
bstr.workspace = true
gix.workspace = true

[dev-dependencies]
but-meta = { workspace = true, features = ["legacy"] }
but-testsupport.workspace = true
gitbutler-reference.workspace = true
snapbox.workspace = true

[lints]
workspace = true
