[package]
name = "gitbutler-stack"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-core.workspace = true
but-rebase.workspace = true
but-meta.workspace = true
but-error.workspace = true
but-ctx.workspace = true

gitbutler-repo.workspace = true
gitbutler-reference.workspace = true

gix = { workspace = true, features = [] }
itertools.workspace = true
anyhow.workspace = true
bstr.workspace = true

[dev-dependencies]
but-askpass.workspace = true
but-db.workspace = true
but-testsupport.workspace = true
filetime = "0.2"
gitbutler-git.workspace = true
tempfile.workspace = true
toml.workspace = true
ctor = "0.6.3"

[lints]
workspace = true
